# parallelism

./: Makefile  task2.c
lab_1/cmake/: CMakeLists.txt  README.md
lab_1/make/: Makefile  README.md  main.cpp
lab_2/: REPORT.md  Report.md  task1.c  task3.cpp
lab_3/task1/: Makefile  REPORT.md  task1.cpp
lab_3/task2/: Makefile  task2.cpp  test_results.cpp
